turso-test-runner/tests/snapshot_tests/indexes/snapshots/indexes__range-scan-between.snap
---
source: indexes.sqltest
expression: SELECT id, event_type, severity FROM events WHERE severity BETWEEN 3 AND 7;
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH events USING INDEX idx_events_severity

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  14   0                     0  Start at 14
   1  OpenRead         0  11   0  k(6,B,B,B,B,B,B)   0  table=events, root=11, iDb=0
   2  OpenRead         1  12   0  k(2,B)             0  index=idx_events_severity, root=12, iDb=0
   3  Integer          3   4   0                     0  r[4]=3
   4  SeekGE           1  13   4                     0  key=[4..4]
   5  Integer          7   4   0                     0  r[4]=7
   6    IdxGT          1  13   4                     0  key=[4..4]
   7    DeferredSeek   1   0   0                     0
   8    IdxRowId       1   1   0                     0  r[1]=cursor 1 for index idx_events_severity.rowid
   9    Column         0   1   2                     0  r[2]=events.event_type
  10    Column         0   2   3                     0  r[3]=events.severity
  11    ResultRow      1   3   0                     0  output=r[1..3]
  12  Next             1   6   0                     0
  13  Halt             0   0   0                     0
  14  Transaction      0   1  14                     0  iDb=0 tx_mode=Read
  15  Goto             0   1   0                     0
