turso-test-runner/tests/snapshot_tests/indexes/snapshots/indexes__range-scan-timestamp.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, timestamp
      FROM events
      WHERE timestamp >= '2024-01-01' AND timestamp < '2024-02-01';
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH events USING INDEX idx_events_timestamp

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  14   0                     0  Start at 14
   1  OpenRead         0  11   0  k(6,B,B,B,B,B,B)   0  table=events, root=11, iDb=0
   2  OpenRead         1  13   0  k(2,B)             0  index=idx_events_timestamp, root=13, iDb=0
   3  String8          0   4   0  2024-01-01         0  r[4]='2024-01-01'
   4  SeekGE           1  13   4                     0  key=[4..4]
   5  String8          0   4   0  2024-02-01         0  r[4]='2024-02-01'
   6    IdxGE          1  13   4                     0  key=[4..4]
   7    DeferredSeek   1   0   0                     0
   8    IdxRowId       1   1   0                     0  r[1]=cursor 1 for index idx_events_timestamp.rowid
   9    Column         0   1   2                     0  r[2]=events.event_type
  10    Column         0   3   3                     0  r[3]=events.timestamp
  11    ResultRow      1   3   0                     0  output=r[1..3]
  12  Next             1   6   0                     0
  13  Halt             0   0   0                     0
  14  Transaction      0   1  14                     0  iDb=0 tx_mode=Read
  15  Goto             0   1   0                     0
