turso-test-runner/tests/snapshot_tests/indexes/snapshots/indexes__simple-index-equality-lookup.snap
---
source: indexes.sqltest
expression: SELECT id, name, price FROM products WHERE sku = 'ABC123';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_sku

BYTECODE
addr  opcode          p1  p2  p3  p4                  p5  comment
   0  Init             0  14   0                       0  Start at 14
   1  OpenRead         0   2   0  k(7,B,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2  OpenRead         1   3   0  k(2,B)               0  index=idx_products_sku, root=3, iDb=0
   3  String8          0   4   0  ABC123               0  r[4]='ABC123'
   4  SeekGE           1  13   4                       0  key=[4..4]
   5    IdxGT          1  13   4                       0  key=[4..4]
   6    DeferredSeek   1   0   0                       0
   7    IdxRowId       1   1   0                       0  r[1]=cursor 1 for index idx_products_sku.rowid
   8    Column         0   2   2                       0  r[2]=products.name
   9    Column         0   4   3                       0  r[3]=products.price
  10    RealAffinity   3   0   0                       0
  11    ResultRow      1   3   0                       0  output=r[1..3]
  12  Next             1   5   0                       0
  13  Halt             0   0   0                       0
  14  Transaction      0   1  14                       0  iDb=0 tx_mode=Read
  15  Goto             0   1   0                       0
