turso-test-runner/tests/snapshot_tests/indexes/snapshots/indexes__subquery-with-index.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, sku, name
      FROM products
      WHERE id IN (SELECT product_id FROM inventory WHERE warehouse_id = 1);
info:
  statement_type: SELECT
  tables:
  - inventory
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH inventory USING INDEX idx_inventory_covering
`--SCAN products

BYTECODE
addr  opcode         p1  p2  p3  p4                  p5  comment
   0  Init            0  36   0                       0  Start at 36
   1  Once           11   0   0                       0  goto 11
   2  OpenEphemeral   0   0   0                       0  cursor=0 is_table=false
   3  OpenRead        1  10   0  k(4,B,B,B)           0  index=idx_inventory_covering, root=10, iDb=0
   4  Integer         1   2   0                       0  r[2]=1
   5  SeekGE          1  11   2                       0  key=[2..2]
   6    IdxGT         1  11   2                       0  key=[2..2]
   7    Column        1   1   1                       0  r[1]=idx_inventory_covering.product_id
   8    MakeRecord    1   1   3                       0  r[3]=mkrec(r[1..1]); for ephemeral_index_where_sub_t2
   9    IdxInsert     0   3   0                       8  key=r[3]
  10  Next            1   6   0                       0
  11  OpenRead        2   2   0  k(7,B,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
  12  Rewind          2  35   0                       0  Rewind table products
  13    Integer       0   7   0                       0  r[7]=0
  14    RowId         2   8   0                       0  r[8]=products.rowid
  15    Affinity      8   1   0                       0  r[8..9] = D
  16    NotFound      0  18   8                       0  if not found goto 18
  17    Goto          0  24   0                       0
  18    Rewind        0  26   0                       0  Rewind  ephemeral_index_where_sub_t2
  19      Column      0   0   9                       0  r[9]=ephemeral_index_where_sub_t2.product_id
  20      Ne          8   9  22  Binary               0  if r[8]!=r[9] goto 22
  21      Goto        0  28   0                       0
  22    Next          0  19   0                       0
  23    Goto          0  26   0                       0
  24    Integer       1   7   0                       0  r[7]=1
  25    Goto          0  29   0                       0
  26    Integer       0   7   0                       0  r[7]=0
  27    Goto          0  29   0                       0
  28    Null          0   7   0                       0  r[7]=NULL
  29    IfNot         7  34   1                       0  if !r[7] goto 34
  30    RowId         2   4   0                       0  r[4]=products.rowid
  31    Column        2   1   5                       0  r[5]=products.sku
  32    Column        2   2   6                       0  r[6]=products.name
  33    ResultRow     4   3   0                       0  output=r[4..6]
  34  Next            2  13   0                       0
  35  Halt            0   0   0                       0
  36  Transaction     0   1  14                       0  iDb=0 tx_mode=Read
  37  Goto            0   1   0                       0
